objects/EKM_Meter__c.object
<CustomObject>
    <fields>
        <fullName>EKM_Meter_Version__c</fullName>
        <description>Enter the Version Number of the EKM Meter here</description>
        <inlineHelpText>Enter the Version Number of the EKM Meter here</inlineHelpText>
        <label>EKM Meter Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v3</fullName>
                </value>
                <value>
                    <fullName>v4</fullName>
                </value>
                <value>
                    <fullName>v3 UL</fullName>
                </value>
                <value>
                    <fullName>v4 UL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EKM_Push__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paired to EKM Push</label>
        <referenceTo>EKM_Push__c</referenceTo>
        <relationshipLabel>EKM Meters</relationshipLabel>
        <relationshipName>EKM_Meters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KioskTrackingIDNo__c</fullName>
        <formula>Kiosk__r.LIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kiosk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What Location is this meter being used at?</description>
        <inlineHelpText>What Location is this meter being used at?</inlineHelpText>
        <label>Location</label>
        <referenceTo>Kiosk__c</referenceTo>
        <relationshipLabel>EKM Meters</relationshipLabel>
        <relationshipName>EKM_Meters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meter_URL_Formula__c</fullName>
        <formula>HYPERLINK(TEXT(readmeter_url_base__c)&amp;Name, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meter URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Build</label>
        <referenceTo>Production_Build__c</referenceTo>
        <relationshipLabel>EKM Meters</relationshipLabel>
        <relationshipName>EKM_Meters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Widget_Link__c</fullName>
        <description>Link to EKM Graphical Metering Data Display Widget</description>
        <inlineHelpText>Link to EKM Graphical Metering Data Display Widget</inlineHelpText>
        <label>Widget Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Widget_URL__c</fullName>
        <formula>HYPERLINK(&quot;http://widget.ekmmetering.com/EKM2/?reads=100&amp;key=NTY0MjU3OjQ4OTA0Mg&amp;meter=&quot;&amp; Name, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Widget URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>readMeter__c</fullName>
        <description>The ekm push link to the live meter readings goes here. Not to be confused with the widget link.</description>
        <inlineHelpText>The ekm push link to the live meter readings goes here. Not to be confused with the widget link.</inlineHelpText>
        <label>/readMeter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>readmeter_url_base__c</fullName>
        <description>First chunk of readmeter url base</description>
        <inlineHelpText>First chunk of readmeter url base</inlineHelpText>
        <label>readmeter url base</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EKM_Meter_Version__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>http://io.ekmpush.com/readMeter/v3/key/NTY0MjU3OjQ4OTA0Mg/format/html/count/10/timezone/America~Los_Angeles/meters/</fullName>
                </value>
                <value>
                    <fullName>http://io.ekmpush.com/readMeter/v4/key/NTY0MjU3OjQ4OTA0Mg/format/html/count/10/timezone/America~Los_Angeles/meters/</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EKM Meter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KioskTrackingIDNo__c</columns>
        <columns>Kiosk__c</columns>
        <columns>EKM_Meter_Version__c</columns>
        <columns>readmeter_url_base__c</columns>
        <columns>Meter_URL_Formula__c</columns>
        <columns>Widget_URL__c</columns>
        <columns>readMeter__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>EKM_Push__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Felix_Meters</fullName>
        <columns>NAME</columns>
        <columns>KioskTrackingIDNo__c</columns>
        <columns>Kiosk__c</columns>
        <columns>EKM_Meter_Version__c</columns>
        <columns>readmeter_url_base__c</columns>
        <columns>Meter_URL_Formula__c</columns>
        <columns>readMeter__c</columns>
        <columns>Widget_Link__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>EKM_Push__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Felix</value>
        </filters>
        <label>Felix Meters</label>
    </listViews>
    <listViews>
        <fullName>Not_Assigned</fullName>
        <columns>NAME</columns>
        <columns>EKM_Meter_Version__c</columns>
        <columns>readMeter__c</columns>
        <columns>Widget_Link__c</columns>
        <columns>KioskTrackingIDNo__c</columns>
        <columns>Kiosk__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Kiosk__c</field>
            <operation>equals</operation>
        </filters>
        <label>Not Assigned</label>
    </listViews>
    <nameField>
        <label>EKM Meter Serial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EKM Meters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>